--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -26,6 +26,9 @@
     {
       image:'/assets/twilio.png',
     },
+     {
+      image:'/assets/magath.png',
+    },
     {
       image:'/assets/adobe2.png',
     },
@@ -36,8 +39,8 @@
   const repetitions = 4;
   ---
   
-  <div class="marquee-container">
-    <p class="ps-4 lg:ps-20 font-semibold">Trusted by:</p>
+  <div class="marquee-container ">
+    <p class=" font-semibold text-center">Trusted by:</p>
     <div class="marquee" id="marquee">
       
       {[...Array(repetitions)].map(() => (
