--- a/src/components/ServiceCards.astro
+++ b/src/components/ServiceCards.astro
@@ -8,76 +8,76 @@ const cards = [
     overlay_text: "Aerospace and Defense",
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Automobile Industry Use Cases for CCaaS",
+    description: "CCaaS (Contact Center as a Service) is revolutionizing customer service in various industries, including the automobile sector. The automobile industry can leverage CCaaS automation to improve customer experiences, streamline operations, and enhance efficiency.",
     image: "/assets/third-card.png",
     overlay_text: "Automotive",
     pdfLink:"/assets/automotive.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Banking and Insurance Use Cases for CCaaS",
+    description: "The Banking and Insurance Industries can greatly benefit from CCaaS (Contact Center as a Service) automation to streamline customer support, enhance operational efficiency, ensure compliance, and provide a personalized experience.",
     image: "/assets/second-card.png",
     overlay_text: "Banking",
     pdfLink:"/assets/banking.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
-    image: "/assets/first-card.png",
+    title: "Media and Communication Use Cases for CCaaS",
+    description: "The Media and Communication Industry faces unique challenges in managing high volumes of customer interactions across various channels, ensuring content personalization, and offering responsive support. CCaaS (Contact Center as a Service) automation can address these challenges by streamlining communication, reducing costs, and enhancing the customer experience.",
+    image: "/assets/second-card.png",
     overlay_text: "Communication and Media",
     pdfLink:"/assets/media_and_communication.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Consumer Goods and Services Use Cases for CCaaS",
+    description: "The FMCG (Fast-Moving Consumer Goods) industry can greatly benefit from CCaaS (Contact Center as a Service) automation to streamline customer interactions, improve supply chain management, enhance marketing efforts, and increase operational efficiency. Given the high volume of customer interactions, frequent product updates, and large customer base, automation is crucial for managing inquiries, maintaining customer satisfaction, and boosting sales.",
     image: "/assets/first-card.png",
     overlay_text: "Consumer Goods and Services",
     pdfLink:"/assets/Customer_Goods and_Services.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Energy Use Cases for CCaaS",
+    description: "The energy industry can benefit greatly from CCaaS (Contact Center as a Service) CX automation to enhance customer satisfaction, streamline operations, and optimize resources.",
     image: "/assets/first-card.png",
     overlay_text: "Energy",
     pdfLink:"/assets/Energy.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Health and Pharma Use Cases for CCaaS",
+    description: "The Pharmaceutical Industry can leverage CCaaS (Contact Center as a Service) automation to improve customer engagement, streamline operations, and enhance overall efficiency. With increasing demands for compliance, patient-centric services, and complex product information, automation offers solutions to handle routine tasks, enhance communication, and maintain regulatory standards.",
     image: "/assets/first-card.png",
     overlay_text: "Health",
     pdfLink:"/assets/Health_and_Pharma.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Insurance Use Cases for CCaaS",
+    description: "The Insurance Industry can greatly benefit from CCaaS (Contact Center as a Service) automation to streamline customer support, enhance operational efficiency, ensure compliance, and provide a personalized experience.",
     image: "/assets/first-card.png",
     overlay_text: "Insurance",
     pdfLink:"/assets/Insurance.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Public Service Use Cases for CCaaS",
+    description: "The Public Service Industry can greatly benefit from CCaaS (Contact Center as a Service) automation to streamline customer support, enhance operational efficiency, ensure compliance, and provide a personalized experience.",
     image: "/assets/first-card.png",
     overlay_text: "Public Service"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Retail Use Cases for CCaaS",
+    description: "The Retail Industry can greatly benefit from CCaaS (Contact Center as a Service) automation to streamline customer support, enhance operational efficiency, ensure compliance, and provide a personalized experience.",
     image: "/assets/first-card.png",
     overlay_text: "Retail"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Travel Use Cases for CCaaS",
+    description: "The travel industry can significantly enhance customer experiences and operational efficiency by leveraging CCaaS (Contact Center as a Service) solutions with CX automation.",
     image: "/assets/first-card.png",
     overlay_text: "Travel",
     pdfLink:"/assets/Travel.pdf"
   },
   {
-    title: "Evaluate and improve your product concept",
-    description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
+    title: "Utilities Use Cases for CCaaS",
+    description: "The Oil & Gas industry is a highly complex and capital-intensive sector that involves numerous stakeholders, from corporate clients and suppliers to regulatory bodies and field personnel. In such an environment, ensuring a smooth customer experience (CX) through CCaaS (Contact Center as a Service) automation can lead to greater efficiency, reduced operational costs, enhanced safety, and better customer satisfaction. By automating key customer interactions, oil and gas companies can improve operational agility, respond to customer needs more quickly, and optimize their support processes. ",
     image: "/assets/first-card.png",
     overlay_text: "Utilities",
     pdfLink:"/assets/Oil-Gas-Utilities.pdf"
