Pricing and contactForm changes

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -3,7 +3,7 @@ import { emailConfig } from '../config/email';
 import emailjs from '@emailjs/browser';
 
 const interestOptions = ['AX', 'BX', 'CX', 'DX'];
-const licenseOptions = ['Free Trial', 'CXP1', 'CXP2', 'CXP3'];
+const licenseOptions = ['Free Trial', 'CXP1', 'CXP2', ];
 ---
 
 <div class="min-h-screen bg-[#E7E7D6] py-12 px-4 sm:px-6 lg:px-8" id="form">
