--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -33,7 +33,10 @@
       image:'/assets/adobe2.png',
     },
     {
-      image:'/assets/cxguru2.avif',
+      image:'/assets/cxguru.png',
+    },
+    {
+      image:'/assets/miro.png'
     }
   ];
   const repetitions = 4;
@@ -154,9 +157,10 @@
     }
   
     .word-container img {
-      width: auto;
-      height: 5rem;
+      width: 120px;
+      height: 60px;
       object-fit: contain;
+      margin: 0 1rem;
     }
   
     .arrow {
