--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -86,7 +86,18 @@ const sections = [
                 </div>
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-10">
-                <video src={CompanyVideo} class="w-full h-full company-video rounded-3xl" autoplay loop muted></video>
+                <video 
+                    src={CompanyVideo} 
+                    class="w-full h-full company-video rounded-3xl" 
+                    autoplay 
+                    loop 
+                    muted
+                    playsinline 
+                >
+                    {/* Add fallback content */}
+                    <source src={CompanyVideo} type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-10" id="locations">
                 <div class="w-full h-full lg:pt-12">
