--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -87,14 +87,13 @@ const sections = [
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-10">
                 <video 
-                    src={CompanyVideo} 
                     class="w-full h-[60vh] object-cover rounded-3xl" 
                     autoplay 
                     loop 
                     muted
                     playsinline 
                 >
-                    <source src={CompanyVideo} type="video/mp4" />
+                    <source src="/assets/companyvideo.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
             </div>
