--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -93,7 +93,9 @@ const sections = [
                     muted
                     playsinline 
                     preload="auto"
+                    src="/assets/03_morningbuilding_1_company.mp4"
                 >   
+                    <source src={CompanyVideo} type="video/mp4"/>
                     <source src="/assets/companyvideo.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
