--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -8,7 +8,6 @@ import ContactForm from '../../components/ContactForm.astro';
 import KuldeepImage from "../../../public/assets/Kuldeep.jpg";
 import PradeepImage from "../../../public/assets/Pradeep.jpeg";
 import VishwaImage from "../../../public/assets/Vishwa.jpg";
-import CompanyVideo from "../../../public/assets/companyvideo.mp4"
 
 const sections = [
     {
@@ -93,11 +92,8 @@ const sections = [
                     muted
                     playsinline 
                     preload="auto"
-                    src="/assets/03_morningbuilding_1_company.mp4"
+                    src="/assets/03_morningbuilding_1_company.mov"
                 >   
-                    <source src={CompanyVideo} type="video/mp4"/>
-                    <source src="/assets/companyvideo.mp4" type="video/mp4" />
-                    Your browser does not support the video tag.
                 </video>
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-10" id="locations">
