--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -30,8 +30,9 @@ import { carouselData } from "../../data/carouselData.js";
                         loop 
                         muted 
                         playsinline
+                        src="../../../public/assets/resources_video.mov"
                     >
-                        <source src="/assets/07_Newsarticles_Resources.mp4" type="video/mp4">
+                        <source  type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
