--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -62,9 +62,9 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                     loop 
                     muted 
                     playsinline
+                    src="../../../public/assets/service_video.mov"
+                    preload="auto"
                 >
-                    <source src="/assets/08_typo-a_Services.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
                 </video>
             </div>
         </div>
