--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -32,7 +32,7 @@ import { carouselData } from "../../data/carouselData.js";
                         playsinline
                         src="../../../public/assets/resources_video.mov"
                     >
-                        <source  type="video/mp4">
+                        <source  type="video/mov">
                         Your browser does not support the video tag.
                     </video>
                 </div>
