video trial bug 14

--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -31,6 +31,7 @@ import { carouselData } from "../../data/carouselData.js";
                         muted 
                         playsinline
                         src="../../../public/assets/resources_video.mov"
+                        preload="auto"
                     >
                     </video>
                 </div>
